--- a/archives/toutiao-search/2024-04-08.md
+++ b/archives/toutiao-search/2024-04-08.md
@@ -1,57 +1,70 @@
 # 2024-04-08
 
-共 349 条
+共 359 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 08 2024 22:01:09 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 08 2024 23:01:10 GMT+0800 (China Standard Time) -->
 1. [财政部：耶伦访华与中国达成2点新共识](https://so.toutiao.com/search?keyword=财政部：耶伦访华与中国达成2点新共识)
-1. [雷军回应SU7被高强度拆车](https://so.toutiao.com/search?keyword=雷军回应SU7被高强度拆车)
+1. [智己L6发布 预售价23万-33万元](https://so.toutiao.com/search?keyword=智己L6发布+预售价23万-33万元)
 1. [发展新质生产力要“喜新”不“厌旧”](https://so.toutiao.com/search?keyword=发展新质生产力要“喜新”不“厌旧”)
 1. [美财长耶伦开完记者会后跑去喝啤酒](https://so.toutiao.com/search?keyword=美财长耶伦开完记者会后跑去喝啤酒)
-1. [奥迪A6被错加92号汽油车主抽干油箱](https://so.toutiao.com/search?keyword=奥迪A6被错加92号汽油车主抽干油箱)
+1. [马英九率台青参观故宫](https://so.toutiao.com/search?keyword=马英九率台青参观故宫)
 1. [直击今年唯一一次日全食](https://so.toutiao.com/search?keyword=直击今年唯一一次日全食)
-1. [马英九参观卢沟桥](https://so.toutiao.com/search?keyword=马英九参观卢沟桥)
-1. [感动中国2023年度人物公布](https://so.toutiao.com/search?keyword=感动中国2023年度人物公布)
-1. [浙大一女生23年前写的励志标语火了](https://so.toutiao.com/search?keyword=浙大一女生23年前写的励志标语火了)
-1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
+1. [雷军回应SU7被高强度拆车](https://so.toutiao.com/search?keyword=雷军回应SU7被高强度拆车)
+1. [奥迪A6被错加92号汽油车主抽干油箱](https://so.toutiao.com/search?keyword=奥迪A6被错加92号汽油车主抽干油箱)
+1. [《追风者》的原型有多牛](https://so.toutiao.com/search?keyword=《追风者》的原型有多牛)
+1. [小米SU7拆车总结](https://so.toutiao.com/search?keyword=小米SU7拆车总结)
 1. [被邻居袭击身亡的律师去年刚结婚](https://so.toutiao.com/search?keyword=被邻居袭击身亡的律师去年刚结婚)
 1. [南昌公交事故司机当时心脏不适失去意识](https://so.toutiao.com/search?keyword=南昌公交事故司机当时心脏不适失去意识)
 1. [重庆永川有电信诈骗园区？不实](https://so.toutiao.com/search?keyword=重庆永川有电信诈骗园区？不实)
-1. [女子在霸王茶姬脱光上衣坐柜台上](https://so.toutiao.com/search?keyword=女子在霸王茶姬脱光上衣坐柜台上)
-1. [足协所有中层干部暂时免去职务](https://so.toutiao.com/search?keyword=足协所有中层干部暂时免去职务)
-1. [被举报婚内出轨的局长已停职](https://so.toutiao.com/search?keyword=被举报婚内出轨的局长已停职)
 1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
-1. [小米SU7拆车总结](https://so.toutiao.com/search?keyword=小米SU7拆车总结)
 1. [砸奔驰大妈丈夫：骑电动车追3里地](https://so.toutiao.com/search?keyword=砸奔驰大妈丈夫：骑电动车追3里地)
-1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
+1. [女子在霸王茶姬脱光上衣坐柜台上](https://so.toutiao.com/search?keyword=女子在霸王茶姬脱光上衣坐柜台上)
+1. [耶伦：访华取得三方面重要进展](https://so.toutiao.com/search?keyword=耶伦：访华取得三方面重要进展)
+1. [足协所有中层干部暂时免去职务](https://so.toutiao.com/search?keyword=足协所有中层干部暂时免去职务)
+1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
+1. [浙大一女生23年前写的励志标语火了](https://so.toutiao.com/search?keyword=浙大一女生23年前写的励志标语火了)
 1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
-1. [马英九率台青参观故宫](https://so.toutiao.com/search?keyword=马英九率台青参观故宫)
-1. [俄战机投放FAB-500摧毁乌军指挥所](https://so.toutiao.com/search?keyword=俄战机投放FAB-500摧毁乌军指挥所)
+1. [被举报婚内出轨的局长已停职](https://so.toutiao.com/search?keyword=被举报婚内出轨的局长已停职)
 1. [男孩家门口滑倒 爷奶直接砸掉瓷砖](https://so.toutiao.com/search?keyword=男孩家门口滑倒+爷奶直接砸掉瓷砖)
-1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
-1. [胡锡进评初中生遇害案嫌犯被追刑责](https://so.toutiao.com/search?keyword=胡锡进评初中生遇害案嫌犯被追刑责)
-1. [直行卡车与转弯小车发生无接触事故](https://so.toutiao.com/search?keyword=直行卡车与转弯小车发生无接触事故)
-1. [赖岳谦：美航母对中国构不成威慑力](https://so.toutiao.com/search?keyword=赖岳谦：美航母对中国构不成威慑力)
+1. [美媒：以色列及其盟友失去全球信誉](https://so.toutiao.com/search?keyword=美媒：以色列及其盟友失去全球信誉)
 1. [金价暴涨房价下跌说明了什么](https://so.toutiao.com/search?keyword=金价暴涨房价下跌说明了什么)
+1. [上海一居民楼顶出现巨大鱼缸](https://so.toutiao.com/search?keyword=上海一居民楼顶出现巨大鱼缸)
+1. [王红权星自曝在一个小区有7套房](https://so.toutiao.com/search?keyword=王红权星自曝在一个小区有7套房)
+1. [每7个晋江人就有1个是老板](https://so.toutiao.com/search?keyword=每7个晋江人就有1个是老板)
 1. [中央新一轮巡视对象公布 含证监会](https://so.toutiao.com/search?keyword=中央新一轮巡视对象公布+含证监会)
-1. [智己L6发布 预售价23万-33万元](https://so.toutiao.com/search?keyword=智己L6发布+预售价23万-33万元)
-1. [抗癌女孩刘怡去世](https://so.toutiao.com/search?keyword=抗癌女孩刘怡去世)
+1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
+1. [马英九参观卢沟桥](https://so.toutiao.com/search?keyword=马英九参观卢沟桥)
+1. [大学生特种兵骑共享单车从北京到天津](https://so.toutiao.com/search?keyword=大学生特种兵骑共享单车从北京到天津)
 1. [警方通报蒜苗被轧大妈怒砸奔驰车](https://so.toutiao.com/search?keyword=警方通报蒜苗被轧大妈怒砸奔驰车)
+1. [澳大利亚总理：不满意以色列的解释](https://so.toutiao.com/search?keyword=澳大利亚总理：不满意以色列的解释)
+1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
+1. [女孩看到英歌队后自信大方与其互动](https://so.toutiao.com/search?keyword=女孩看到英歌队后自信大方与其互动)
+1. [抗癌女孩刘怡去世](https://so.toutiao.com/search?keyword=抗癌女孩刘怡去世)
+1. [盘点历史6次黄金牛市走势](https://so.toutiao.com/search?keyword=盘点历史6次黄金牛市走势)
+1. [感动中国2023年度人物公布](https://so.toutiao.com/search?keyword=感动中国2023年度人物公布)
+1. [超快充固态电池首次量产上车](https://so.toutiao.com/search?keyword=超快充固态电池首次量产上车)
+1. [直行卡车与转弯小车发生无接触事故](https://so.toutiao.com/search?keyword=直行卡车与转弯小车发生无接触事故)
+1. [耶伦两次访华带火三份菜单](https://so.toutiao.com/search?keyword=耶伦两次访华带火三份菜单)
+1. [虐猫考生疑未通过兰大面试 本人发声](https://so.toutiao.com/search?keyword=虐猫考生疑未通过兰大面试+本人发声)
+1. [多机构看好中长期金价上涨](https://so.toutiao.com/search?keyword=多机构看好中长期金价上涨)
+1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
+1. [男子不问价买40万黄金涉嫌洗钱被拘](https://so.toutiao.com/search?keyword=男子不问价买40万黄金涉嫌洗钱被拘)
+1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
+1. [小米SU7车险首年价格达6至8千元](https://so.toutiao.com/search?keyword=小米SU7车险首年价格达6至8千元)
+1. [阿不都沙拉木当选CBA常规赛MVP](https://so.toutiao.com/search?keyword=阿不都沙拉木当选CBA常规赛MVP)
+1. [俄外长访华 中俄准备谈什么](https://so.toutiao.com/search?keyword=俄外长访华+中俄准备谈什么)
+1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
+1. [俄战机投放FAB-500摧毁乌军指挥所](https://so.toutiao.com/search?keyword=俄战机投放FAB-500摧毁乌军指挥所)
+1. [胡锡进评初中生遇害案嫌犯被追刑责](https://so.toutiao.com/search?keyword=胡锡进评初中生遇害案嫌犯被追刑责)
+1. [赖岳谦：美航母对中国构不成威慑力](https://so.toutiao.com/search?keyword=赖岳谦：美航母对中国构不成威慑力)
 1. [意外吃到去世10年爷爷种的韭菜](https://so.toutiao.com/search?keyword=意外吃到去世10年爷爷种的韭菜)
 1. [马英九：必须学会和平解决争端](https://so.toutiao.com/search?keyword=马英九：必须学会和平解决争端)
-1. [俄外长访华 中俄准备谈什么](https://so.toutiao.com/search?keyword=俄外长访华+中俄准备谈什么)
 1. [知名痔疮药停产后涨价10多倍](https://so.toutiao.com/search?keyword=知名痔疮药停产后涨价10多倍)
 1. [记者：范志毅答应后可能翻脸了](https://so.toutiao.com/search?keyword=记者：范志毅答应后可能翻脸了)
-1. [虐猫考生疑未通过兰大面试 本人发声](https://so.toutiao.com/search?keyword=虐猫考生疑未通过兰大面试+本人发声)
 1. [患癌妈妈去世18年网店从不打烊](https://so.toutiao.com/search?keyword=患癌妈妈去世18年网店从不打烊)
-1. [盘点历史6次黄金牛市走势](https://so.toutiao.com/search?keyword=盘点历史6次黄金牛市走势)
-1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
-1. [王红权星自曝在一个小区有7套房](https://so.toutiao.com/search?keyword=王红权星自曝在一个小区有7套房)
 1. [耶伦游览北京故宫](https://so.toutiao.com/search?keyword=耶伦游览北京故宫)
 1. [挑战兰博基尼和小米SU7拔河](https://so.toutiao.com/search?keyword=挑战兰博基尼和小米SU7拔河)
-1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
-1. [女孩看到英歌队后自信大方与其互动](https://so.toutiao.com/search?keyword=女孩看到英歌队后自信大方与其互动)
-1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
 1. [湖南衡阳公安局副局长唐耀兵被查](https://so.toutiao.com/search?keyword=湖南衡阳公安局副局长唐耀兵被查)
 1. [薛之谦刘惜君是怎么忍住不笑的](https://so.toutiao.com/search?keyword=薛之谦刘惜君是怎么忍住不笑的)
 1. [港珠澳大桥现“春运式”景象](https://so.toutiao.com/search?keyword=港珠澳大桥现“春运式”景象)
@@ -59,7 +72,6 @@
 1. [浙江34岁律师遇袭身亡 系邻里纠纷](https://so.toutiao.com/search?keyword=浙江34岁律师遇袭身亡+系邻里纠纷)
 1. [34岁律师遇袭身亡 2人被刑拘](https://so.toutiao.com/search?keyword=34岁律师遇袭身亡+2人被刑拘)
 1. [民房失火波及托管班：死伤多为儿童](https://so.toutiao.com/search?keyword=民房失火波及托管班：死伤多为儿童)
-1. [耶伦两次访华带火三份菜单](https://so.toutiao.com/search?keyword=耶伦两次访华带火三份菜单)
 1. [中方：没有兴趣和任何国家比拼军力](https://so.toutiao.com/search?keyword=中方：没有兴趣和任何国家比拼军力)
 1. [泽连斯基：没有美援助乌将输掉战争](https://so.toutiao.com/search?keyword=泽连斯基：没有美援助乌将输掉战争)
 1. [诈骗犯狱中再骗多人 未出狱又加刑](https://so.toutiao.com/search?keyword=诈骗犯狱中再骗多人+未出狱又加刑)
@@ -75,7 +87,6 @@
 1. [马英九参观中国人民抗日战争纪念馆](https://so.toutiao.com/search?keyword=马英九参观中国人民抗日战争纪念馆)
 1. [美财长耶伦打卡过的川菜馆生意火爆](https://so.toutiao.com/search?keyword=美财长耶伦打卡过的川菜馆生意火爆)
 1. [莫斯科恐袭嫌犯供出幕后协调人](https://so.toutiao.com/search?keyword=莫斯科恐袭嫌犯供出幕后协调人)
-1. [每7个晋江人就有1个是老板](https://so.toutiao.com/search?keyword=每7个晋江人就有1个是老板)
 1. [中学教师带着失智母亲去课堂](https://so.toutiao.com/search?keyword=中学教师带着失智母亲去课堂)
 1. [雷军“造车很苦”言论被怼](https://so.toutiao.com/search?keyword=雷军“造车很苦”言论被怼)
 1. [钢铁煤炭价格为何跌惨了](https://so.toutiao.com/search?keyword=钢铁煤炭价格为何跌惨了)
@@ -133,7 +144,6 @@
 1. [曹德旺落子合肥项目开工 投资57亿](https://so.toutiao.com/search?keyword=曹德旺落子合肥项目开工+投资57亿)
 1. [韩国演员马东锡将于5月举办婚礼](https://so.toutiao.com/search?keyword=韩国演员马东锡将于5月举办婚礼)
 1. [落马贪官抚摸党旗崩溃痛哭](https://so.toutiao.com/search?keyword=落马贪官抚摸党旗崩溃痛哭)
-1. [小米SU7车险首年价格达6至8千元](https://so.toutiao.com/search?keyword=小米SU7车险首年价格达6至8千元)
 1. [记者：浓眉能出战湖人与勇士的比赛](https://so.toutiao.com/search?keyword=记者：浓眉能出战湖人与勇士的比赛)
 1. [老夫妇居家俩月用水1023吨](https://so.toutiao.com/search?keyword=老夫妇居家俩月用水1023吨)
 1. [辽宁铁人俱乐部发布文明观赛倡议书](https://so.toutiao.com/search?keyword=辽宁铁人俱乐部发布文明观赛倡议书)
